# procjectRRAI

./: .dockerignore  .env.example  Dockerfile  PRESENTATION.md  README.md  app1.py  docker-compose.yml  pyproject.toml  test_agent.py
.streamlit/: config.toml
app/: auth.py  config.py  llm.py  main.py  schemas.py
app/agents/: graph.py  graph1.py  nodes.py  nodes1.py  state.py  state1.py  tools1.py
app/api/: datasets.py  query.py
app/db/: database.py  models.py
app/storage/: s3.py
ui/: requirements.txt  streamlit_app.py
