[project]
name = "datamind"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.36",
    "fastapi>=0.138.1",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
